Code html structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,9 +23,122 @@
 </head>
 
 <body>
+    <header>
+      <div class="content-wrapper">
+        <img src="img/unpluggedlogo.png" alt="charging battery unplugged logo">
+        <nav>
+          <ul>
+            <li>faq</li>
+            <li>abut</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+    <main>
+      <!--HERO SECTION-->
+      <section id="hero">
+        <h1>Retreat from the desk, return refreshed.</h1>
+      </section>
+
+      <!--JOIN SECTION-->
+      <section id="join">
+        <div class="content-wrapper">
+          <div class="join-text">
+            <h3>Want to join the next retreat?</h3>
+            <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+          </div>
+
+          <div class="sign-up-form">
+            <h3>Find out more</h3>
+            <!--FORM HERE-->
+          </div>
+        </div>
+      </section>
+
+      <!--FEEATURES SECTION-->
+      <section id="features">
+        <div class="content-wrapper">
+          <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+          <div class="features-section">
+            <!--icon here-->
+            <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          </div>
+
+          <div class="features-section">
+            <!--icon here-->
+            <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms</p>
+          </div>
+
+          <div class="features-section">
+            <!--icon here-->
+            <p>Private chef team providing on demand meals - just like your team kitchen.</p>
+          </div>
+
+          <div class="features-section">
+            <!--icon here-->
+            <p>5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
+          </div>
+
+          <div class="features-section">
+            <!--icon here-->
+            <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+          </div>
+
+          <div class="features-section">
+            <!--icon here-->
+            <p>Dedicated computer room for times that you must wifi.</p>
+          </div>
+
+        </div>
+      </section>
+
+      <!--CUSTOMER EXPERIENCE SECTION-->
+      <section id="customer-experience">
+        <div class="content-wrapper">
+          <h2>Be a better team in 5 days, like this one.</h2>
+
+            <div class="customer-experience-image">
+              <img src="img/unplugged-retreat-lacrue.jpg" alt="team of coworkers in nature">
+            </div>
+
+            <div class="team-review">
+              <h3>LaCrue Bottling Co.<br>October 2018</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur.</p>
+            </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="content-wrapper">
+
+        <div id="contact-info">
+          <h4>Contact</h4> 
+          <div id="contact-info">
+            <p>555-555-5555<br>
+            <a href="mailto:hello@unplugged.com">hello@unplugged.com</a></p>
+          </div>
+        </div>
+
+        <div id="social">
+          <h4>Social</h4>
+          <li><a href="https://it-it.facebook.com/" target="_blank"><img src="" alt="facebook icon"></a></li>
+          <li><a href="https://twitter.com/?lang=it" target="_blank"><img src="" alt="twitter icon"></a></li>
+          <li><a href="https://www.instagram.com/" target="_blank"><img src="" alt="instagram icon"></a></li>
+        </div>
+
+        <div id="copyright">
+          <p>Copyright 202X | Unplugged</p> 
+        </div>
+      </div>
+    </footer>
+
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
