--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>FAQ | Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,9 +23,82 @@
 </head>
 
 <body>
+  <header>
+    <div class="content-wrapper">
+      <img src="../img/unpluggedlogo.png" alt="charging battery unplugged logo">
+      <nav>
+        <ul>
+          <li>faq</li>
+          <li>abut</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <main>
+    <section id="mission">
+      <div class="content-wrapper">
+        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Quis ipsum suspendisse ultrices gravida. 
+          Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Quis ipsum suspendisse ultrices gravida. 
+          Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+      </div>
+    </section>
+
+    <section id="map">
+      <!--embed map here-->
+    </section>
+
+    <section id="address">
+      <h2></h2>
+        <div class="general-contact-info">
+          <h4>General information</h4>
+          <address>
+            333 Main St, Lake Geneva, WI 53147
+            555-555-5555
+            <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+          </address>
+        </div>
+
+        <div class="chat-info">
+          <h4>Chat with a facilitator</h4>
+          <p>555-555-5556<br>
+          <a href="mailto:facilitator@unplugged.com">facilitator@unplugged.com</a></p>
+        </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+
+      <div id="contact-info">
+        <h4>Contact</h4> 
+        <address>
+          555-555-5555<br>
+          <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+        </address>
+      </div>
+
+      <div id="social">
+        <h4>Social</h4>
+        <li><a href="https://it-it.facebook.com/" target="_blank"><img src="" alt="facebook icon"></a></li>
+        <li><a href="https://twitter.com/?lang=it" target="_blank"><img src="" alt="twitter icon"></a></li>
+        <li><a href="https://www.instagram.com/" target="_blank"><img src="" alt="instagram icon"></a></li>
+      </div>
+
+      <div id="copyright">
+        <p>Copyright 202X | Unplugged</p> 
+      </div>
+    </div>
+  </footer>
+
+
+  
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
