--- a/faq/index.html
+++ b/faq/index.html
@@ -23,9 +23,80 @@
 </head>
 
 <body>
+  <header>
+    <div class="content-wrapper">
+      <img src="../img/unpluggedlogo.png" alt="charging battery unplugged logo">
+      <nav>
+        <ul>
+          <li>faq</li>
+          <li>abut</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <main>
+    <div class="content-wrapper">
+      <!--capitalize text-->
+      <h2>Frequently asked questions</h2>
+
+      <div class="question">
+        <h4>How do I get to the Unplugged retreat?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+          do eiusmod tempor incididunt ut labore
+          et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+      </div>
+
+      <div class="question">
+        <h4>What kind of team is right for the Unplugged retreat?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+          do eiusmod tempor incididunt ut labore
+          et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+      </div>
+
+      <div class="question">
+        <h4>What size teams can you accommodate?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+          do eiusmod tempor incididunt ut labore
+          et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+      </div>
+
+      <div class="question">
+        <h4>Is there really no wifi available?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+          do eiusmod tempor incididunt ut labore
+          et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+      </div>
+
+    </div>
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+
+      <div id="contact-info">
+        <h4>Contact</h4> 
+        <address>
+          555-555-5555<br>
+          <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+        </address>
+      </div>
+
+      <div id="social">
+        <h4>Social</h4>
+        <li><a href="https://it-it.facebook.com/" target="_blank"><img src="" alt="facebook icon"></a></li>
+        <li><a href="https://twitter.com/?lang=it" target="_blank"><img src="" alt="twitter icon"></a></li>
+        <li><a href="https://www.instagram.com/" target="_blank"><img src="" alt="instagram icon"></a></li>
+      </div>
+
+      <div id="copyright">
+        <p>Copyright 202X | Unplugged</p> 
+      </div>
+    </div>
+  </footer>
+
+
+ 
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
