--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>FAQ | Unplugged</title>
+  <title>About | Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,11 +25,11 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <img src="../img/unpluggedlogo.png" alt="charging battery unplugged logo">
+      <a href="../index.html#home"><img src="../img/unpluggedlogo.png" alt="charging battery unplugged logo"></a>
       <nav>
         <ul>
-          <li>faq</li>
-          <li>abut</li>
+          <li><a href="../faq/index.html">Faq</a></li>
+          <li><a href="../about/index.html">About</a></li>
         </ul>
       </nav>
     </div>
@@ -52,6 +52,9 @@
 
     <section id="map">
       <!--embed map here-->
+      <figure>
+
+      </figure>
     </section>
 
     <section id="address">
