--- a/faq/index.html
+++ b/faq/index.html
@@ -25,11 +25,11 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <img src="../img/unpluggedlogo.png" alt="charging battery unplugged logo">
+      <a href="../index.html#home"><img src="../img/unpluggedlogo.png" alt="charging battery unplugged logo"></a>
       <nav>
         <ul>
-          <li>faq</li>
-          <li>abut</li>
+          <li><a href="../faq/index.html">Faq</a></li>
+          <li><a href="../about/index.html">About</a></li>
         </ul>
       </nav>
     </div>
