--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <!--ASIDE SECTION-->
       <aside>
         <div class="content-wrapper">
-          <div class="join-text">
+          <div class="aside-text">
             <h3>Want to join the next retreat?</h3>
             <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
           </div>
@@ -67,34 +67,42 @@
       <section id="features">
         <div class="content-wrapper">
           <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
-          <div class="features-section">
-            <!--icon here-->
-            <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-          </div>
+          <div class="all-features">
+            <div class="features-section">
+              <!--icon here-->
+              <img src="" alt="" class="features-icon">
+              <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+            </div>
 
-          <div class="features-section">
-            <!--icon here-->
-            <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms</p>
-          </div>
+            <div class="features-section">
+              <!--icon here-->
+              <img src="" alt="" class="features-icon">
+              <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms</p>
+            </div>
 
-          <div class="features-section">
-            <!--icon here-->
-            <p>Private chef team providing on demand meals - just like your team kitchen.</p>
-          </div>
+            <div class="features-section">
+              <!--icon here-->
+              <img src="" alt="" class="features-icon">
+              <p>Private chef team providing on demand meals - just like your team kitchen.</p>
+            </div>
 
-          <div class="features-section">
-            <!--icon here-->
-            <p>5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
-          </div>
+            <div class="features-section">
+              <!--icon here-->
+              <img src="" alt="" class="features-icon">
+              <p>5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
+            </div>
 
-          <div class="features-section">
-            <!--icon here-->
-            <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-          </div>
+            <div class="features-section">
+              <!--icon here-->
+              <img src="" alt="" class="features-icon">
+              <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+            </div>
 
-          <div class="features-section">
-            <!--icon here-->
-            <p>Dedicated computer room for times that you must wifi.</p>
+            <div class="features-section">
+              <!--icon here-->
+              <img src="" alt="" class="features-icon">
+              <p>Dedicated computer room for times that you must wifi.</p>
+            </div>
           </div>
 
         </div>
@@ -126,7 +134,7 @@
 
         <div id="contact-info">
           <h4>Contact</h4> 
-          <div id="contact-info">
+          <div id="contact-data">
             <p>555-555-5555<br>
             <a href="mailto:hello@unplugged.com">hello@unplugged.com</a></p>
           </div>
@@ -134,9 +142,11 @@
 
         <div id="social">
           <h4>Social</h4>
-          <li><a href="https://it-it.facebook.com/" target="_blank"><img src="" alt="facebook icon"></a></li>
-          <li><a href="https://twitter.com/?lang=it" target="_blank"><img src="" alt="twitter icon"></a></li>
-          <li><a href="https://www.instagram.com/" target="_blank"><img src="" alt="instagram icon"></a></li>
+          <div class="social-icons">
+            <li><a href="https://it-it.facebook.com/" target="_blank"><img src="" alt="facebook icon"></a></li>
+            <li><a href="https://twitter.com/?lang=it" target="_blank"><img src="" alt="twitter icon"></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank"><img src="" alt="instagram icon"></a></li>
+          </div>
         </div>
 
         <div id="copyright">
