--- a/faq/index.html
+++ b/faq/index.html
@@ -40,32 +40,34 @@
       <!--capitalize text-->
       <h2>Frequently asked questions</h2>
 
-      <div class="question">
-        <h4>How do I get to the Unplugged retreat?</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+      <div class="all-questions">
+        <div class="question">
+          <h4>How do I get to the Unplugged retreat?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore
           et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-      </div>
+        </div>
 
-      <div class="question">
-        <h4>What kind of team is right for the Unplugged retreat?</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+        <div class="question">
+          <h4>What kind of team is right for the Unplugged retreat?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore
           et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-      </div>
+        </div>
 
-      <div class="question">
-        <h4>What size teams can you accommodate?</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+        <div class="question">
+          <h4>What size teams can you accommodate?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore
           et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-      </div>
+        </div>
 
-      <div class="question">
-        <h4>Is there really no wifi available?</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+        <div class="question">
+          <h4>Is there really no wifi available?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore
           et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+        </div>
       </div>
 
     </div>
