--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
         <div id="logo-container">
           <a href="#"><img src="img/unpluggedlogo.png" alt="charging battery unplugged logo"></a>
         </div>
-        
         <nav>
           <ul>
             <li><a href="faq/index.html">Faq</a></li>
@@ -58,7 +57,9 @@
 
           <div class="sign-up-form">
             <h3>Find out more</h3>
-            <!--FORM HERE-->
+            <form>
+              <!--FORM HERE-->
+            </form>
           </div>
         </div>
       </aside>
@@ -143,9 +144,11 @@
         <div id="social">
           <h4>Social</h4>
           <div class="social-icons">
-            <li><a href="https://it-it.facebook.com/" target="_blank"><img src="" alt="facebook icon"></a></li>
-            <li><a href="https://twitter.com/?lang=it" target="_blank"><img src="" alt="twitter icon"></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank"><img src="" alt="instagram icon"></a></li>
+            <ul>
+              <li><a href="https://it-it.facebook.com/" target="_blank"><img src="" alt="facebook icon"></a></li>
+              <li><a href="https://twitter.com/?lang=it" target="_blank"><img src="" alt="twitter icon"></a></li>
+              <li><a href="https://www.instagram.com/" target="_blank"><img src="" alt="instagram icon"></a></li>
+            </ul>
           </div>
         </div>
 
