Fix html content width and clean css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Unplugged</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
@@ -57,9 +57,8 @@
 
           <div class="sign-up-form">
             <h3>Find out more</h3>
-            <form>
-              <!--FORM HERE-->
-            </form>
+            <input type="text" name="name" value="name@email.com">
+            <input type="button" value="Download Itinerary">
           </div>
         </div>
       </aside>
@@ -70,7 +69,10 @@
           <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
           <div class="all-features">
             <div class="features-section">
-              <!--icon here-->
+              <!--icon here
+              <p class="fontawesome-icon">
+              </p>
+              -->
               <img src="" alt="" class="features-icon">
               <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
             </div>
