--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>FAQ | Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,51 +25,49 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <a href="../index.html#home"><img src="../img/unpluggedlogo.png" alt="charging battery unplugged logo"></a>
+      <div id="logo-container">
+        <a href="../index.html#"><img src="../img/unpluggedlogo.png" alt="charging battery unplugged logo"></a>
+      </div>
       <nav>
         <ul>
-          <li><a href="../faq/index.html">Faq</a></li>
+          <li><a href="faq/index.html">Faq</a></li>
           <li><a href="../about/index.html">About</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main>
+  <main class="faq">
     <div class="content-wrapper">
       <!--capitalize text-->
       <h2>Frequently asked questions</h2>
+          <div class="question">
+            <h4>How do I get to the Unplugged retreat?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+            do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+          </div>
 
-      <div class="all-questions">
-        <div class="question">
-          <h4>How do I get to the Unplugged retreat?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
-          do eiusmod tempor incididunt ut labore
-          et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-        </div>
+          <div class="question">
+            <h4>What kind of team is right for the Unplugged retreat?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+            do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+          </div>
 
-        <div class="question">
-          <h4>What kind of team is right for the Unplugged retreat?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
-          do eiusmod tempor incididunt ut labore
-          et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-        </div>
+          <div class="question">
+            <h4>What size teams can you accommodate?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+            do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+          </div>
 
-        <div class="question">
-          <h4>What size teams can you accommodate?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
-          do eiusmod tempor incididunt ut labore
-          et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-        </div>
-
-        <div class="question">
-          <h4>Is there really no wifi available?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
-          do eiusmod tempor incididunt ut labore
-          et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-        </div>
-      </div>
-
+          <div class="question">
+            <h4>Is there really no wifi available?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+            do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+          </div>
     </div>
   </main>
 
@@ -78,17 +76,21 @@
 
       <div id="contact-info">
         <h4>Contact</h4> 
-        <address>
-          555-555-5555<br>
-          <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
-        </address>
+        <div id="contact-data">
+          <p>555-555-5555<br>
+          <a href="mailto:hello@unplugged.com">hello@unplugged.com</a></p>
+        </div>
       </div>
 
       <div id="social">
         <h4>Social</h4>
-        <li><a href="https://it-it.facebook.com/" target="_blank"><img src="" alt="facebook icon"></a></li>
-        <li><a href="https://twitter.com/?lang=it" target="_blank"><img src="" alt="twitter icon"></a></li>
-        <li><a href="https://www.instagram.com/" target="_blank"><img src="" alt="instagram icon"></a></li>
+        <div class="social-icons">
+          <ul>
+            <li><a href="https://it-it.facebook.com/" target="_blank"><img src="" alt="facebook icon"></a></li>
+            <li><a href="https://twitter.com/?lang=it" target="_blank"><img src="" alt="twitter icon"></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank"><img src="" alt="instagram icon"></a></li>
+          </ul>
+        </div>
       </div>
 
       <div id="copyright">
