--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Unplugged</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
@@ -57,8 +57,10 @@
 
           <div class="sign-up-form">
             <h3>Find out more</h3>
-            <input type="text" name="name" value="name@email.com">
-            <input type="button" value="Download Itinerary">
+            <form>
+              <input type="text" name="name" value="name@email.com">
+              <input type="button" value="Download Itinerary">
+            </form>
           </div>
         </div>
       </aside>
