Finish mobile css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+  <script src="https://kit.fontawesome.com/73e0dcd77f.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -71,41 +71,44 @@
           <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
           <div class="all-features">
             <div class="features-section">
-              <!--icon here
               <p class="fontawesome-icon">
+                <i class="fas fa-campground"></i>
               </p>
-              -->
-              <img src="" alt="" class="features-icon">
               <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
             </div>
 
             <div class="features-section">
-              <!--icon here-->
-              <img src="" alt="" class="features-icon">
+              <p class="fontawesome-icon">
+                <i class="fas fa-bed"></i>
+              </p>
               <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms</p>
             </div>
 
             <div class="features-section">
-              <!--icon here-->
-              <img src="" alt="" class="features-icon">
+              <p class="fontawesome-icon">
+                <i class="fas fa-utensils"></i>
+              </p>
               <p>Private chef team providing on demand meals - just like your team kitchen.</p>
             </div>
 
             <div class="features-section">
-              <!--icon here-->
-              <img src="" alt="" class="features-icon">
+              <p class="fontawesome-icon">
+                <i class="fas fa-shoe-prints"></i>
+              </p>
               <p>5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
             </div>
 
             <div class="features-section">
-              <!--icon here-->
-              <img src="" alt="" class="features-icon">
+              <p class="fontawesome-icon">
+                <i class="fas fa-smile"></i>
+              </p>
               <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
             </div>
 
             <div class="features-section">
-              <!--icon here-->
-              <img src="" alt="" class="features-icon">
+              <p class="fontawesome-icon">
+                <i class="fas fa-wifi"></i>
+              </p>
               <p>Dedicated computer room for times that you must wifi.</p>
             </div>
           </div>
@@ -148,11 +151,15 @@
         <div id="social">
           <h4>Social</h4>
           <div class="social-icons">
-            <ul>
-              <li><a href="https://it-it.facebook.com/" target="_blank"><img src="" alt="facebook icon"></a></li>
-              <li><a href="https://twitter.com/?lang=it" target="_blank"><img src="" alt="twitter icon"></a></li>
-              <li><a href="https://www.instagram.com/" target="_blank"><img src="" alt="instagram icon"></a></li>
-            </ul>
+            <p>
+              <a href="https://www.facebook.com/Skillcrush/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            </p>
+            <p class="second-icon">
+              <a href="https://twitter.com/Skillcrush" target="_blank"><i class="fab fa-twitter"></i></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/skillcrush/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </p>
           </div>
         </div>
 
