--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 
   <link rel="manifest" href="../site.webmanifest">
   <link rel="apple-touch-icon" href="../icon.png">
-  <!-- Place favicon.ico in the root directory -->
+  <script src="https://kit.fontawesome.com/73e0dcd77f.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
@@ -93,11 +93,15 @@
       <div id="social">
         <h4>Social</h4>
         <div class="social-icons">
-          <ul>
-            <li><a href="https://it-it.facebook.com/" target="_blank"><img src="" alt="facebook icon"></a></li>
-            <li><a href="https://twitter.com/?lang=it" target="_blank"><img src="" alt="twitter icon"></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank"><img src="" alt="instagram icon"></a></li>
-          </ul>
+          <p>
+            <a href="https://www.facebook.com/Skillcrush/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          </p>
+          <p class="second-icon">
+            <a href="https://twitter.com/Skillcrush" target="_blank"><i class="fab fa-twitter"></i></a>
+          </p>
+          <p>
+            <a href="https://www.instagram.com/skillcrush/" target="_blank"><i class="fab fa-instagram"></i></a>
+          </p>
         </div>
       </div>
 
