Code css for tablet and desktop

--- a/faq/index.html
+++ b/faq/index.html
@@ -25,9 +25,9 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <div id="logo-container">
+      <figure id="logo-container">
         <a href="../index.html#"><img src="../img/unpluggedlogo.png" alt="charging battery unplugged logo"></a>
-      </div>
+      </figure>
       <nav>
         <ul>
           <li><a href="faq/index.html">Faq</a></li>
