--- a/about/index.html
+++ b/about/index.html
@@ -25,9 +25,9 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <div id="logo-container">
+      <figure id="logo-container">
         <a href="../index.html#"><img src="../img/unpluggedlogo.png" alt="charging battery unplugged logo"></a>
-      </div>
+      </figure>
       <nav>
         <ul>
           <li><a href="../faq/index.html">Faq</a></li>
@@ -41,7 +41,7 @@
     <section id="mission">
       <div class="content-wrapper">
         <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        <p class="mission-first-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Quis ipsum suspendisse ultrices gravida. 
           Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
