--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <body>
     <header>
       <div class="content-wrapper">
-        <div id="logo-container">
+        <figure id="logo-container">
           <a href="#"><img src="img/unpluggedlogo.png" alt="charging battery unplugged logo"></a>
-        </div>
+        </figure>
         <nav>
           <ul>
             <li><a href="faq/index.html">Faq</a></li>
@@ -44,7 +44,7 @@
     <main>
       <!--HERO SECTION-->
       <section id="hero">
-        <h1>Retreat from the desk, return refreshed.</h1>
+        <h1>Retreat from the desk,<br>return refreshed.</h1>
       </section>
 
       <!--ASIDE SECTION-->
@@ -119,11 +119,11 @@
       <!--REVIEWS SECTION-->
       <section id="reviews">
         <div class="content-wrapper">
-          <h2>Be a better team in 5 days, like this one.</h2>
+          <h2>Be a better team in 5 days,<br>like this one.</h2>
 
-            <div class="reviews-image">
+            <figure class="reviews-image">
               <img src="img/unplugged-retreat-lacrue.jpg" alt="team of coworkers in nature">
-            </div>
+            </figure>
 
             <div class="team-review">
               <h3>LaCrue Bottling Co.<br>October 2018</h3>
